# app/Http/Controllers/Api/EventController.php
@@ -2,23 +2,24 @@
 
 namespace App\Http\Controllers\Api;
 
-use Exception;
-use App\Models\Event;
-use App\Utilities\Helpers;
-use Illuminate\Support\Carbon;
+use App\Repository\EventInterface;
 use App\Http\Requests\EventRequest;
 use App\Http\Controllers\Api\BaseController;
 
 class EventController extends BaseController
 {
+    public function __construct(EventInterface $eventInterface)
+    {
+        $this->event = $eventInterface;
+    }
     /**
      * @OA\Get(
      * path="/api/events",
      * security={{ "token": {} }},
-     * summary="Get Events",
-     * description="Note : thiis endpoint has the date changed. to allow for testing of date",
-     * operationId="getEvents",
-     * tags={"events"},
+     * summary="Get Events from DB",
+     * description="Get seeded events from database (with valid dates)",
+     * operationId="EventFromDB",
+     * tags={"Events"},
      * @OA\Parameter(
      *         name="term",
      *         in="query",
@@ -41,18 +42,52 @@ class EventController extends BaseController
      *         @OA\Property(
      *              property="data", 
      *              type="object", 
-     *              @OA\Property(property="current_page", type="integer", example="1"),
      *              @OA\Property(
-     *                          property="data", 
-     *                          type="array", 
-     *                              @OA\Items( ref="#/components/schemas/Event"),)
-     *                          ),
-     *              @OA\Property(property="next_page_url", type="string",  format="email", description="User unique email address", example="user@gmail.com"),
-     *              @OA\Property(property="path", type="string", description="next page url", example="http://localhost:8001/api/events"),
-     *              @OA\Property(property="per_page", type="string", description="number of result per page", example="20"),
-     *              @OA\Property(property="prev_page_url", type="string", description="previous page url",  example="null"),
-     *              @OA\Property(property="to", type="string", description="item count",  example="null"),
-     *              @OA\Property(property="total", type="string", description="total record count",  example="null"),
+     *                  property="current_page", 
+     *                  type="integer", 
+     *                  example="1"
+     *                  ),
+     *              @OA\Property(
+     *                  property="data", 
+     *                  type="array", 
+     *                      @OA\Items( ref="#/components/schemas/Event"),)
+     *                  ),
+     *              @OA\Property(
+     *                  property="next_page_url", 
+     *                   type="string",  
+     *                   format="email", 
+     *                   description="User unique email address", 
+     *                   example="user@gmail.com"
+     *                   ),
+     *              @OA\Property(
+     *                   property="path", 
+     *                   type="string", 
+     *                   description="next page url", 
+     *                   example="http://localhost:8001/api/events"
+     *                   ),
+     *              @OA\Property(
+     *                   property="per_page", 
+     *                   type="string", 
+     *                   description="number of result per page", 
+     *                   example="20"
+     *                   ),
+     *              @OA\Property(
+     *                   property="prev_page_url", 
+     *                   type="string", 
+     *                   description="previous page url",  
+     *                   example="null"
+     *                   ),
+     *              @OA\Property(
+     *                   property="to", type="string", 
+     *                   description="item count", 
+     *                   example="null"
+     *                   ),
+     *              @OA\Property(
+     *                   property="total", 
+     *                   type="string", 
+     *                   description="total record count",  
+     *                   example="null"
+     *                   ),
      *              ),
      *         @OA\Property(
      *              property="message", 
@@ -86,35 +121,18 @@ class EventController extends BaseController
      * )
      */
 
-    public function index(EventRequest $request)
+    public function eventsFromDB(EventRequest $request)
     {
-            $date =  $request->date;
-            $term = $request->term;
-            $event = Event::select();
-
-            if (!isEmpty($date)) {
-                $event = $event->whereDate('startDate', '=',  $date);
-            }
-
-            if (!isEmpty($term)) {
-                $event = $event->where(function($q) use ($term) {
-                    $q->where('city', 'like', '%' . $term . '%')
-                    ->orWhere('country', 'like', '%' . $term . '%');
-                });
-            } // filter by term
-
-            $event = $event->paginate(20);
-            $this->log($request, 'Succesfully Called Events');
-            return $this->sendResponse($event, 'Events called successfully.');
+        return $this->event->eventsFromDB($request);
     }
     /**
      * @OA\Get(
-     * path="/api/events_v2",
+     * path="/api/events_json",
      * security={{ "token": {} }},
-     * summary="Get Events V2",
-     * description="Note : thiis endpoint has the date changed. to allow for testing of date",
-     * operationId="getEventsV2",
-     * tags={"events"},
+     * summary="Get Events From JSON",
+     * description="Get Events from JSON file with intended data intact",
+     * operationId="EventFromJSON",
+     * tags={"Events"},
      * @OA\Parameter(
      *         name="term",
      *         in="query",
@@ -137,18 +155,52 @@ class EventController extends BaseController
      *         @OA\Property(
      *              property="data", 
      *              type="object", 
-     *              @OA\Property(property="current_page", type="integer", example="1"),
      *              @OA\Property(
-     *                          property="data", 
-     *                          type="array", 
-     *                              @OA\Items( ref="#/components/schemas/Event"),)
-     *                          ),
-     *              @OA\Property(property="next_page_url", type="string",  format="email", description="User unique email address", example="user@gmail.com"),
-     *              @OA\Property(property="path", type="string", description="next page url", example="http://localhost:8001/api/events"),
-     *              @OA\Property(property="per_page", type="string", description="number of result per page", example="20"),
-     *              @OA\Property(property="prev_page_url", type="string", description="previous page url",  example="null"),
-     *              @OA\Property(property="to", type="string", description="item count",  example="null"),
-     *              @OA\Property(property="total", type="string", description="total record count",  example="null"),
+     *                  property="current_page", 
+     *                  type="integer", 
+     *                  example="1"
+     *                  ),
+     *              @OA\Property(
+     *                  property="data", 
+     *                  type="array", 
+     *                      @OA\Items( ref="#/components/schemas/Event"),)
+     *                  ),
+     *              @OA\Property(
+     *                  property="next_page_url", 
+     *                   type="string",  
+     *                   format="email", 
+     *                   description="User unique email address", 
+     *                   example="user@gmail.com"
+     *                   ),
+     *              @OA\Property(
+     *                   property="path", 
+     *                   type="string", 
+     *                   description="next page url", 
+     *                   example="http://localhost:8001/api/events"
+     *                   ),
+     *              @OA\Property(
+     *                   property="per_page", 
+     *                   type="string", 
+     *                   description="number of result per page", 
+     *                   example="20"
+     *                   ),
+     *              @OA\Property(
+     *                   property="prev_page_url", 
+     *                   type="string", 
+     *                   description="previous page url",  
+     *                   example="null"
+     *                   ),
+     *              @OA\Property(
+     *                   property="to", type="string", 
+     *                   description="item count", 
+     *                   example="null"
+     *                   ),
+     *              @OA\Property(
+     *                   property="total", 
+     *                   type="string", 
+     *                   description="total record count",  
+     *                   example="null"
+     *                   ),
      *              ),
      *         @OA\Property(
      *              property="message", 
@@ -157,33 +209,10 @@ class EventController extends BaseController
      *              ),
      *        )
      *     ),
+     *     ),
      */
-    public function indexTwo(EventRequest $request)
+    public function eventsFromJSON(EventRequest $request)
     {
-        $events = get_storage_file("/json/data.json");
-        $date =  $request->date;
-        $term = $request->term;
-        $page = $request->page ?? 1;
-
-        $events = collect($events)->filter(function ($event) use ($date, $term) {
-            if (!isEmpty($date) || !isEmpty($term)) {
-                return $this->filterEvent($term, $event, $date);
-            }
-            return true;
-        }); //filter collection
-
-        $events = (new Helpers())->paginate(extractValues($events), $page); //paginate collection
-        $this->log($request, 'Succesfully Called Events');
-        return $this->sendResponse($events, 'Events called successfully.');
-    }
-
-    private function filterEvent($term, $event, $date)
-    {
-        if (!empty($term) && !empty($date)) {
-            return ($event['startDate'] == $date) &&
-                (isMatch($event['city'], $term) || isMatch($event['country'], $term));
-        }
-        return (isMatch($event['city'], $term) ||
-            isMatch($event['country'], $term));
+        return $this->event->eventsFromJSON($request);
     }
 }
